--- a/todo-app/src/styles.css
+++ b/todo-app/src/styles.css
@@ -4,13 +4,14 @@
 }
 
 body {
-  background: white;
+  background: black;
+  color: white;
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 0;
   margin: 0;
-  /* max-height: 80vh; */
+  max-height: 100vh;
   max-width: 100vw;
 }
 
@@ -37,11 +38,63 @@ body {
   font-weight: 400;
 }
 
+.row {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  border: red 1px solid;
+  gap: 1rem;
+}
+
+.month {
+  font-size: 1.5rem;
+  margin: 0;
+  font-size: 2rem;
+  margin-bottom: 0rem;
+  border: green 1px solid;
+}
+
+.salutation {
+  font-size: 2.5rem;
+  margin: 0;
+  margin-bottom: 0rem;
+  border: green 1px solid;
+}
+
+.date {
+  margin-top: 0;
+  align-items: center;
+}
+.col {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0rem;
+  margin: 0;
+  border: blue 1px solid;
+}
+
+.col-2 {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  gap: 0rem;
+  margin: 0;
+  border: blue 1px solid;
+}
+h5 {
+  margin: 0;
+  margin-bottom: 0rem;
+  font-size: 1.5rem;
+  font-weight: 400;
+}
+
 .textfield-form {
   min-width: 80vw;
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
+  margin-top: 3rem;
   margin-bottom: 1rem;
 }
 
@@ -136,7 +189,7 @@ body {
   -webkit-appearance: none;
   width: 1rem;
   height: 1rem;
-  border: 1px solid #000;
+  border: 1px solid whitesmoke;
   border-radius: 0.25rem;
   display: inline-block;
   vertical-align: middle;
