--- a/todo-app/src/styles.css
+++ b/todo-app/src/styles.css
@@ -25,14 +25,7 @@ body {
   margin: 1rem 0;
 }
 
-
-
-
-
-
-
-
-.itemList{
+.itemList {
   background-color: #252525;
   padding: 4px;
   border-radius: 0.2rem;
@@ -47,8 +40,9 @@ body {
 .new-item-form input {
   outline: none;
   border: 1px solid white;
-  background: rgba(0, 122, 255, 0.1);
-  border-radius: 0.25em;
+
+  /* background: rgba(0, 122, 255, 0.1); */
+  /* border-radius: 0.25em; */
   padding: 0.25em 0.5em;
   color: #007aff;
 }
@@ -78,10 +72,9 @@ body {
   gap: 0.5rem;
 }
 
-
 .btn {
-  background: #F6C666;
-  border: 1px solid #F6C666;
+  background: #f6c666;
+  border: 1px solid #f6c666;
   color: black;
   padding: 0.25em 0.5em;
   border-radius: 0.25em;
@@ -113,12 +106,12 @@ body {
   content: "✔";
   display: block;
   color: white;
-  background: black;
+  background: #131313;
   text-align: center;
-  line-height: 1rem;
-  border-radius: 0.25rem;
+  border: none;
+  border-radius: 99rem;
 }
 
 .list li input[type="checkbox"]:focus {
-  outline: 2px solid #007aff;
+  outline: 2px solid #252525;
 }
